--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+json = "0.12.4"
+quartz_nbt = { version = "0.2.8", features = ["serde"] }
 serde = { version = "1.0.196", features = ["derive"] }
 # tokio = { version = "~1.34.0", features = ["net", "macros", "rt"] }
 toml = "0.8.10"
